# the-farm-monitor

./: .env.example  .gitignore  .tokeignore  Changelog.MD  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/workflows/: bundle-backup.yml  format.yml  language-stats.yml  rust-ci.yml  tests.yml
.streamlit/: config.toml
.streamlit/guardrails/: dev_api_state.json
docs/: Model_documentation_process.md  ProcessPreferencesNotes.md  feature-requirements.md  ops.md  rust-phase-c-ui-parity-checklist.md
docs/c4/: README.md  c1-system-context.md  c2-container-diagram.md  c3-component-diagram.md  c4-code-level-diagram.md  c4-ui-feature-map.md
docs/chat_history/: chat02.json
docs/uor/: adr-0001-uor-backend-integration-mode.md  issue-9-uor-evaluation.md
memo/: __init__.py  cli.py  generator.py  schema.py  template.py  ui.py
metrics/: language-history.json
rust/: Cargo.toml  README.md
rust/crates/farm-monitor-api/: Cargo.toml
rust/crates/farm-monitor-api/src/: main.rs
rust/crates/farm-monitor-data/: Cargo.toml
rust/crates/farm-monitor-data/src/: cache.rs  guardrail.rs  lib.rs  models.rs  normalize.rs  provider.rs
rust/crates/farm-monitor-domain/: Cargo.toml
rust/crates/farm-monitor-domain/src/: lib.rs
scripts/: append_language_snapshot.py  backfill_language_stats.py  c4_docs_workflow.sh  mermaid-config.json  render_c4_diagrams.sh
tests/: conftest.py  test_core_logic.py  test_guardrail_config_sanity.py  test_integration_live_api.py  test_memo_generator.py  test_memo_schema.py  test_memo_ui.py
(+20 files in other folders)
